--- a/index.html
+++ b/index.html
@@ -1,107 +1,179 @@
-<!DOCTYPE html><html lang="pl">
+<!DOCTYPE html>
+<html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Generator Podsumowań Meczu</title>
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&family=Roboto&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --bg-color: #0a0f24;
+      --container-bg: #101428;
+      --input-bg: #1c213b;
+      --text-color: #fff;
+      --highlight: #00ffae;
+      --shadow: rgba(0, 255, 174, 0.2);
+    }
+
+    body.light {
+      --bg-color: #f4f4f4;
+      --container-bg: #fff;
+      --input-bg: #eee;
+      --text-color: #111;
+      --highlight: #007f6e;
+      --shadow: rgba(0, 0, 0, 0.1);
+      animation: none;
+    }
+
     body {
       margin: 0;
       font-family: 'Roboto', sans-serif;
-      background: linear-gradient(145deg, #0a0f24, #1b1f3a);
-      color: #fff;
+      background: var(--bg-color);
+      color: var(--text-color);
+      padding: 2rem 1rem 5rem;
+      transition: background 0.3s, color 0.3s;
+      animation: bgPulse 10s ease-in-out infinite;
+      background: linear-gradient(135deg, #0a0f24, #101428, #0c122a);
+      background-size: 600% 600%;
+    }
+
+    @keyframes bgPulse {
+      0%, 100% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+    }
+
+    h1 {
+      font-family: 'Russo One', sans-serif;
+      font-size: 2.5rem;
+      text-align: center;
+      color: var(--highlight);
+      animation: fadeIn 1s ease-out;
+    }
+
+    .container {
+      max-width: 600px;
+      margin: auto;
+      background-color: var(--container-bg);
       padding: 2rem;
-    }h1 {
-  font-family: 'Russo One', sans-serif;
-  font-size: 2.5rem;
-  margin-bottom: 1rem;
-  text-align: center;
-  color: #00ffae;
-}
+      border-radius: 16px;
+      box-shadow: 0 0 20px var(--shadow);
+      animation: fadeInUp 0.7s ease-out;
+    }
 
-.container {
-  max-width: 600px;
-  margin: auto;
-  background-color: #101428;
-  padding: 2rem;
-  border-radius: 16px;
-  box-shadow: 0 0 20px rgba(0, 255, 174, 0.2);
-}
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
 
-label {
-  font-weight: bold;
-  margin-top: 1rem;
-  display: block;
-}
+    input, textarea, select {
+      width: 100%;
+      padding: 0.75rem;
+      margin-top: 0.3rem;
+      margin-bottom: 1rem;
+      border: none;
+      border-radius: 8px;
+      background: var(--input-bg);
+      color: var(--text-color);
+      font-size: 1rem;
+      transition: box-shadow 0.3s ease, background 0.3s ease;
+    }
 
-input, textarea, select {
-  width: 100%;
-  padding: 0.75rem;
-  margin-top: 0.3rem;
-  margin-bottom: 1rem;
-  border: none;
-  border-radius: 8px;
-  background: #1c213b;
-  color: #fff;
-  font-size: 1rem;
-}
+    input:focus, textarea:focus, select:focus {
+      outline: none;
+      box-shadow: 0 0 10px var(--highlight);
+      background-color: #2a2f4d;
+    }
 
-button {
-  background-color: #00ffae;
-  color: #000;
-  padding: 0.8rem;
-  width: 100%;
-  font-size: 1.1rem;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  font-weight: bold;
-  transition: background-color 0.3s;
-}
+    .theme-toggle {
+      position: fixed;
+      top: 1rem;
+      right: 1rem;
+      background: var(--highlight);
+      color: #000;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 999px;
+      font-weight: bold;
+      cursor: pointer;
+      z-index: 999;
+      transition: transform 0.2s ease;
+    }
 
-button:hover {
-  background-color: #00c98e;
-}
+    .theme-toggle:hover {
+      transform: scale(1.05);
+    }
 
-.output {
-  margin-top: 2rem;
-  background: #1e2640;
-  padding: 1.5rem;
-  border-radius: 12px;
-  white-space: pre-wrap;
-  box-shadow: inset 0 0 10px rgba(0, 255, 174, 0.1);
-  font-size: 1.1rem;
-  animation: fadeIn 1s ease-in-out;
-  min-height: 100px;
-}
+    .sticky-button {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      padding: 1rem;
+      background: var(--container-bg);
+      box-shadow: 0 -4px 10px var(--shadow);
+      z-index: 100;
+    }
 
-.live-preview {
-  font-style: italic;
-  color: #aaa;
-  margin-top: 1rem;
-  font-size: 0.95rem;
-  min-height: 60px;
-}
+    button.generate {
+      background-color: var(--highlight);
+      color: #000;
+      padding: 0.8rem;
+      width: 100%;
+      font-size: 1.1rem;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background-color 0.3s ease, transform 0.2s ease;
+    }
 
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(10px); }
-  to { opacity: 1; transform: translateY(0); }
-}
+    button.generate:hover {
+      background-color: #00c98e;
+      transform: scale(1.02);
+    }
 
-@media (max-width: 600px) {
-  body {
-    padding: 1rem;
-  }
-}
+    .output {
+      margin-top: 2rem;
+      background: #1e2640;
+      padding: 1.5rem;
+      border-radius: 12px;
+      white-space: pre-wrap;
+      box-shadow: inset 0 0 10px rgba(0, 255, 174, 0.1);
+      font-size: 1.1rem;
+      animation: fadeIn 0.5s ease-in;
+      min-height: 100px;
+    }
 
+    .live-preview {
+      font-style: italic;
+      color: #aaa;
+      margin-top: 1rem;
+      font-size: 0.95rem;
+      min-height: 60px;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @media (min-width: 601px) {
+      .sticky-button {
+        position: static;
+        background: none;
+        box-shadow: none;
+        padding: 0;
+      }
+    }
   </style>
 </head>
 <body>
+  <button class="theme-toggle" onclick="toggleTheme()">Tryb: <span id="themeLabel">Nocny</span></button>
   <div class="container">
     <h1>Generator Podsumowań</h1>
-    <label>Drużyna A:<input id="teamA" oninput="liveUpdate()" /></label>
+    <label>Drużyna A:<input id="teamA" oninput="liveUpdate()" autofocus /></label>
     <label>Drużyna B:<input id="teamB" oninput="liveUpdate()" /></label>
-    <label>Wynik:<input id="score" placeholder="np. 3:2" oninput="liveUpdate()" /></label>
+    <label>Wynik:<input id="score" oninput="liveUpdate()" /></label>
     <label>Strzelcy:<textarea id="scorers" oninput="liveUpdate()"></textarea></label>
     <label>MVP meczu:<input id="mvp" oninput="liveUpdate()" /></label>
     <label>Wydarzenia specjalne:<textarea id="events" oninput="liveUpdate()"></textarea></label>
@@ -118,34 +190,15 @@ button:hover {
       </select>
     </label>
     <label>OpenRouter API Key:<input id="apikey" placeholder="Wymagany tylko dla AI" /></label>
-    <button onclick="generateSummary()">Generuj podsumowanie</button>
     <div class="live-preview" id="livePreview">Podgląd na żywo...</div>
     <div class="output" id="summary"></div>
-  </div>  <script>
-    function generateTemplate(data, style) {
-      const teamIcons = { home: "⚽", away: "🏟" };
-      const warianty = [
-        `${teamIcons.home} ${data.teamA} vs ${data.teamB} ${teamIcons.away}\nWynik: ${data.score}. MVP: ${data.mvp}. ${data.events}`,
-        `${data.teamA} i ${data.teamB} rozegrali emocjonujące spotkanie zakończone wynikiem ${data.score}. Strzelcy: ${data.scorers}. MVP: ${data.mvp}.`,
-        `Mecz ${data.teamA} - ${data.teamB} zakończył się wynikiem ${data.score}. ${data.events}`
-      ];
+  </div>
 
-      if (style === "luz") {
-        warianty[0] = `Ależ to było starcie! ${data.teamA} i ${data.teamB} dali z siebie wszystko. Wynik ${data.score}, MVP: ${data.mvp}.`;
-        warianty[1] = `Gole, emocje i świetna atmosfera! ${data.teamA} vs ${data.teamB} (${data.score}). ${data.mvp} zagrał jak profesor!`;
-        warianty[2] = `W skrócie: ${data.teamA} vs ${data.teamB}, wynik ${data.score}, MVP: ${data.mvp}. Do zapamiętania!`;
-      }
+  <div class="sticky-button">
+    <button class="generate" onclick="generateSummary()">Generuj podsumowanie</button>
+  </div>
 
-      return warianty[Math.floor(Math.random() * warianty.length)];
-    }
-
-    function liveUpdate() {
-      const data = getData();
-      const style = document.getElementById("style").value;
-      const preview = generateTemplate(data, style);
-      document.getElementById("livePreview").textContent = preview;
-    }
-
+  <script>
     function getData() {
       return {
         teamA: document.getElementById("teamA").value,
@@ -155,6 +208,46 @@ button:hover {
         mvp: document.getElementById("mvp").value,
         events: document.getElementById("events").value
       };
+    }
+
+    function generateTemplate(data, style) {
+      const warianty = [
+        `${data.teamA} vs ${data.teamB} - wynik: ${data.score}. MVP: ${data.mvp}. ${data.events}`,
+        `${data.teamA} i ${data.teamB} rozegrali mecz zakończony ${data.score}. Strzelcy: ${data.scorers}.`,
+        `Mecz ${data.teamA} - ${data.teamB}: ${data.score}. ${data.mvp} zagrał świetnie!`
+      ];
+
+      if (style === "luz") {
+        warianty[0] = `Ależ mecz! ${data.teamA} kontra ${data.teamB}, wynik ${data.score}, MVP: ${data.mvp}!`;
+        warianty[1] = `${data.teamA} i ${data.teamB} dali show! Strzelcy: ${data.scorers}. Wynik: ${data.score}`;
+        warianty[2] = `${data.mvp} pokazał klasę, a wynik meczu to ${data.score}`;
+      }
+
+      return warianty[Math.floor(Math.random() * warianty.length)];
+    }
+
+    function liveUpdate() {
+      const data = getData();
+      const style = document.getElementById("style").value;
+      const preview = generateTemplate(data, style);
+      typeLivePreview(preview);
+    }
+
+    let typingTimeout;
+    function typeLivePreview(text) {
+      clearTimeout(typingTimeout);
+      const el = document.getElementById("livePreview");
+      el.textContent = "";
+      let i = 0;
+
+      function typer() {
+        if (i < text.length) {
+          el.textContent += text.charAt(i);
+          i++;
+          typingTimeout = setTimeout(typer, 20);
+        }
+      }
+      typer();
     }
 
     async function generateSummary() {
@@ -172,9 +265,9 @@ button:hover {
           alert("Wprowadź klucz API");
           return;
         }
-        const prompt = `Napisz podsumowanie meczu piłki nożnej. Drużyny: ${data.teamA} vs ${data.teamB}. Wynik: ${data.score}. Strzelcy: ${data.scorers}. MVP: ${data.mvp}. Wydarzenia: ${data.events}. Styl: ${style === 'serio' ? 'poważny' : 'zabawny'}`;
+        const prompt = `Napisz podsumowanie meczu: ${data.teamA} vs ${data.teamB}, wynik: ${data.score}, strzelcy: ${data.scorers}, MVP: ${data.mvp}, wydarzenia: ${data.events}. Styl: ${style}`;
         try {
-          const response = await fetch("https://openrouter.ai/api/v1/chat/completions", {
+          const res = await fetch("https://openrouter.ai/api/v1/chat/completions", {
             method: "POST",
             headers: {
               "Authorization": `Bearer ${apiKey}`,
@@ -186,15 +279,14 @@ button:hover {
               temperature: 0.9
             })
           });
-          const json = await response.json();
+          const json = await res.json();
           if (json.error) {
             summaryDiv.textContent = `Błąd API: ${json.error.message}`;
           } else {
-            const content = json.choices?.[0]?.message?.content || "Brak odpowiedzi od AI";
-            typeText(summaryDiv, content);
+            typeText(summaryDiv, json.choices?.[0]?.message?.content || "Brak odpowiedzi");
           }
-        } catch (error) {
-          summaryDiv.textContent = `Błąd połączenia: ${error.message}`;
+        } catch (e) {
+          summaryDiv.textContent = `Błąd połączenia: ${e.message}`;
         }
       }
     }
@@ -210,5 +302,20 @@ button:hover {
       }
       typer();
     }
-  </script></body>
+
+    function toggleTheme() {
+      document.body.classList.toggle("light");
+      const isLight = document.body.classList.contains("light");
+      document.getElementById("themeLabel").textContent = isLight ? "Dzienny" : "Nocny";
+      localStorage.setItem("theme", isLight ? "light" : "dark");
+    }
+
+    window.addEventListener("DOMContentLoaded", () => {
+      if (localStorage.getItem("theme") === "light") {
+        document.body.classList.add("light");
+        document.getElementById("themeLabel").textContent = "Dzienny";
+      }
+    });
+  </script>
+</body>
 </html>
