--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="pl">
+<!DOCTYPE html><html lang="pl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -13,158 +12,157 @@
       --text-color: #fff;
       --highlight: #00ffae;
       --shadow: rgba(0, 255, 174, 0.2);
-    }
+    }body.light {
+  --bg-color: #f4f4f4;
+  --container-bg: #fff;
+  --input-bg: #eee;
+  --text-color: #111;
+  --highlight: #007f6e;
+  --shadow: rgba(0, 0, 0, 0.1);
+  animation: none;
+}
 
-    body.light {
-      --bg-color: #f4f4f4;
-      --container-bg: #fff;
-      --input-bg: #eee;
-      --text-color: #111;
-      --highlight: #007f6e;
-      --shadow: rgba(0, 0, 0, 0.1);
-      animation: none;
-    }
+body {
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  background: var(--bg-color);
+  color: var(--text-color);
+  padding: 2rem 1rem 5rem;
+  transition: background 0.3s, color 0.3s;
+  animation: bgPulse 10s ease-in-out infinite;
+  background: linear-gradient(135deg, #0a0f24, #101428, #0c122a);
+  background-size: 600% 600%;
+}
 
-    body {
-      margin: 0;
-      font-family: 'Roboto', sans-serif;
-      background: var(--bg-color);
-      color: var(--text-color);
-      padding: 2rem 1rem 5rem;
-      transition: background 0.3s, color 0.3s;
-      animation: bgPulse 10s ease-in-out infinite;
-      background: linear-gradient(135deg, #0a0f24, #101428, #0c122a);
-      background-size: 600% 600%;
-    }
+@keyframes bgPulse {
+  0%, 100% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+}
 
-    @keyframes bgPulse {
-      0%, 100% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-    }
+h1 {
+  font-family: 'Russo One', sans-serif;
+  font-size: 2.5rem;
+  text-align: center;
+  color: var(--highlight);
+  animation: fadeIn 1s ease-out;
+}
 
-    h1 {
-      font-family: 'Russo One', sans-serif;
-      font-size: 2.5rem;
-      text-align: center;
-      color: var(--highlight);
-      animation: fadeIn 1s ease-out;
-    }
+.container {
+  max-width: 600px;
+  margin: auto;
+  background-color: var(--container-bg);
+  padding: 2rem;
+  border-radius: 16px;
+  box-shadow: 0 0 20px var(--shadow);
+  animation: fadeInUp 0.7s ease-out;
+}
 
-    .container {
-      max-width: 600px;
-      margin: auto;
-      background-color: var(--container-bg);
-      padding: 2rem;
-      border-radius: 16px;
-      box-shadow: 0 0 20px var(--shadow);
-      animation: fadeInUp 0.7s ease-out;
-    }
+@keyframes fadeInUp {
+  from { opacity: 0; transform: translateY(20px); }
+  to { opacity: 1; transform: translateY(0); }
+}
 
-    @keyframes fadeInUp {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+input, textarea, select {
+  width: 100%;
+  padding: 0.75rem;
+  margin-top: 0.3rem;
+  margin-bottom: 1rem;
+  border: none;
+  border-radius: 8px;
+  background: var(--input-bg);
+  color: var(--text-color);
+  font-size: 1rem;
+  transition: box-shadow 0.3s ease, background 0.3s ease;
+}
 
-    input, textarea, select {
-      width: 100%;
-      padding: 0.75rem;
-      margin-top: 0.3rem;
-      margin-bottom: 1rem;
-      border: none;
-      border-radius: 8px;
-      background: var(--input-bg);
-      color: var(--text-color);
-      font-size: 1rem;
-      transition: box-shadow 0.3s ease, background 0.3s ease;
-    }
+input:focus, textarea:focus, select:focus {
+  outline: none;
+  box-shadow: 0 0 10px var(--highlight);
+  background-color: #2a2f4d;
+}
 
-    input:focus, textarea:focus, select:focus {
-      outline: none;
-      box-shadow: 0 0 10px var(--highlight);
-      background-color: #2a2f4d;
-    }
+.theme-toggle {
+  position: fixed;
+  top: 1rem;
+  right: 1rem;
+  background: var(--highlight);
+  color: #000;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 999px;
+  font-weight: bold;
+  cursor: pointer;
+  z-index: 999;
+  transition: transform 0.2s ease;
+}
 
-    .theme-toggle {
-      position: fixed;
-      top: 1rem;
-      right: 1rem;
-      background: var(--highlight);
-      color: #000;
-      border: none;
-      padding: 0.5rem 1rem;
-      border-radius: 999px;
-      font-weight: bold;
-      cursor: pointer;
-      z-index: 999;
-      transition: transform 0.2s ease;
-    }
+.theme-toggle:hover {
+  transform: scale(1.05);
+}
 
-    .theme-toggle:hover {
-      transform: scale(1.05);
-    }
+.sticky-button {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 1rem;
+  background: var(--container-bg);
+  box-shadow: 0 -4px 10px var(--shadow);
+  z-index: 100;
+}
 
-    .sticky-button {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      padding: 1rem;
-      background: var(--container-bg);
-      box-shadow: 0 -4px 10px var(--shadow);
-      z-index: 100;
-    }
+button.generate {
+  background-color: var(--highlight);
+  color: #000;
+  padding: 0.8rem;
+  width: 100%;
+  font-size: 1.1rem;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
 
-    button.generate {
-      background-color: var(--highlight);
-      color: #000;
-      padding: 0.8rem;
-      width: 100%;
-      font-size: 1.1rem;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      font-weight: bold;
-      transition: background-color 0.3s ease, transform 0.2s ease;
-    }
+button.generate:hover {
+  background-color: #00c98e;
+  transform: scale(1.02);
+}
 
-    button.generate:hover {
-      background-color: #00c98e;
-      transform: scale(1.02);
-    }
+.output {
+  margin-top: 2rem;
+  background: #1e2640;
+  padding: 1.5rem;
+  border-radius: 12px;
+  white-space: pre-wrap;
+  box-shadow: inset 0 0 10px rgba(0, 255, 174, 0.1);
+  font-size: 1.1rem;
+  animation: fadeIn 0.5s ease-in;
+  min-height: 100px;
+}
 
-    .output {
-      margin-top: 2rem;
-      background: #1e2640;
-      padding: 1.5rem;
-      border-radius: 12px;
-      white-space: pre-wrap;
-      box-shadow: inset 0 0 10px rgba(0, 255, 174, 0.1);
-      font-size: 1.1rem;
-      animation: fadeIn 0.5s ease-in;
-      min-height: 100px;
-    }
+.live-preview {
+  font-style: italic;
+  color: #aaa;
+  margin-top: 1rem;
+  font-size: 0.95rem;
+  min-height: 60px;
+}
 
-    .live-preview {
-      font-style: italic;
-      color: #aaa;
-      margin-top: 1rem;
-      font-size: 0.95rem;
-      min-height: 60px;
-    }
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
 
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
+@media (min-width: 601px) {
+  .sticky-button {
+    position: static;
+    background: none;
+    box-shadow: none;
+    padding: 0;
+  }
+}
 
-    @media (min-width: 601px) {
-      .sticky-button {
-        position: static;
-        background: none;
-        box-shadow: none;
-        padding: 0;
-      }
-    }
   </style>
 </head>
 <body>
@@ -174,8 +172,18 @@
     <label>Drużyna A:<input id="teamA" oninput="liveUpdate()" autofocus /></label>
     <label>Drużyna B:<input id="teamB" oninput="liveUpdate()" /></label>
     <label>Wynik:<input id="score" oninput="liveUpdate()" /></label>
+    <label>Wynik do przerwy:<input id="halftime" oninput="liveUpdate()" /></label>
+    <label>Pierwszy strzelec:<input id="firstScorer" oninput="liveUpdate()" /></label>
+    <label>Liczba bramek (łącznie):<input id="totalGoals" oninput="liveUpdate()" /></label>
+    <label>Bramki do przerwy:<input id="goalsHalftime" oninput="liveUpdate()" /></label>
     <label>Strzelcy:<textarea id="scorers" oninput="liveUpdate()"></textarea></label>
+    <label>Kartki:<textarea id="cards" oninput="liveUpdate()"></textarea></label>
     <label>MVP meczu:<input id="mvp" oninput="liveUpdate()" /></label>
+    <label>SuperStar - Drużyna A:<input id="starA" oninput="liveUpdate()" /></label>
+    <label>SuperStar - Drużyna B:<input id="starB" oninput="liveUpdate()" /></label>
+    <label>Sędzia:<input id="referee" oninput="liveUpdate()" /></label>
+    <label>Miejsce w tabeli - Drużyna A:<input id="placeA" oninput="liveUpdate()" /></label>
+    <label>Miejsce w tabeli - Drużyna B:<input id="placeB" oninput="liveUpdate()" /></label>
     <label>Wydarzenia specjalne:<textarea id="events" oninput="liveUpdate()"></textarea></label>
     <label>Tryb generowania:
       <select id="mode">
@@ -192,62 +200,28 @@
     <label>OpenRouter API Key:<input id="apikey" placeholder="Wymagany tylko dla AI" /></label>
     <div class="live-preview" id="livePreview">Podgląd na żywo...</div>
     <div class="output" id="summary"></div>
-  </div>
-
-  <div class="sticky-button">
+  </div>  <div class="sticky-button">
     <button class="generate" onclick="generateSummary()">Generuj podsumowanie</button>
-  </div>
-
-  <script>
+  </div>  <script>
     function getData() {
       return {
         teamA: document.getElementById("teamA").value,
         teamB: document.getElementById("teamB").value,
         score: document.getElementById("score").value,
+        halftime: document.getElementById("halftime").value,
+        firstScorer: document.getElementById("firstScorer").value,
+        totalGoals: document.getElementById("totalGoals").value,
+        goalsHalftime: document.getElementById("goalsHalftime").value,
         scorers: document.getElementById("scorers").value,
+        cards: document.getElementById("cards").value,
         mvp: document.getElementById("mvp").value,
+        starA: document.getElementById("starA").value,
+        starB: document.getElementById("starB").value,
+        referee: document.getElementById("referee").value,
+        placeA: document.getElementById("placeA").value,
+        placeB: document.getElementById("placeB").value,
         events: document.getElementById("events").value
       };
-    }
-
-    function generateTemplate(data, style) {
-      const warianty = [
-        `${data.teamA} vs ${data.teamB} - wynik: ${data.score}. MVP: ${data.mvp}. ${data.events}`,
-        `${data.teamA} i ${data.teamB} rozegrali mecz zakończony ${data.score}. Strzelcy: ${data.scorers}.`,
-        `Mecz ${data.teamA} - ${data.teamB}: ${data.score}. ${data.mvp} zagrał świetnie!`
-      ];
-
-      if (style === "luz") {
-        warianty[0] = `Ależ mecz! ${data.teamA} kontra ${data.teamB}, wynik ${data.score}, MVP: ${data.mvp}!`;
-        warianty[1] = `${data.teamA} i ${data.teamB} dali show! Strzelcy: ${data.scorers}. Wynik: ${data.score}`;
-        warianty[2] = `${data.mvp} pokazał klasę, a wynik meczu to ${data.score}`;
-      }
-
-      return warianty[Math.floor(Math.random() * warianty.length)];
-    }
-
-    function liveUpdate() {
-      const data = getData();
-      const style = document.getElementById("style").value;
-      const preview = generateTemplate(data, style);
-      typeLivePreview(preview);
-    }
-
-    let typingTimeout;
-    function typeLivePreview(text) {
-      clearTimeout(typingTimeout);
-      const el = document.getElementById("livePreview");
-      el.textContent = "";
-      let i = 0;
-
-      function typer() {
-        if (i < text.length) {
-          el.textContent += text.charAt(i);
-          i++;
-          typingTimeout = setTimeout(typer, 20);
-        }
-      }
-      typer();
     }
 
     async function generateSummary() {
@@ -265,7 +239,13 @@
           alert("Wprowadź klucz API");
           return;
         }
-        const prompt = `Napisz podsumowanie meczu: ${data.teamA} vs ${data.teamB}, wynik: ${data.score}, strzelcy: ${data.scorers}, MVP: ${data.mvp}, wydarzenia: ${data.events}. Styl: ${style}`;
+
+        const styleInstructions = style === "luz"
+          ? "Napisz w lekkim, zabawnym stylu, pełnym luzu i emocji."
+          : "Napisz w poważnym, sportowo-analitycznym stylu.";
+
+        const prompt = `${styleInstructions}\nStwórz podsumowanie meczu piłkarskiego pomiędzy ${data.teamA} i ${data.teamB}.\nWynik końcowy: ${data.score} (do przerwy: ${data.halftime}).\nPierwszy strzelec: ${data.firstScorer}.\nBramki: ${data.totalGoals} (do przerwy: ${data.goalsHalftime}).\nStrzelcy: ${data.scorers}.\nKartki: ${data.cards}.\nMVP: ${data.mvp}.\nSuperStar ${data.teamA}: ${data.starA}, SuperStar ${data.teamB}: ${data.starB}.\nSędzia: ${data.referee}.\nMiejsca w tabeli: ${data.teamA} - ${data.placeA}, ${data.teamB} - ${data.placeB}.\nDodatkowe wydarzenia: ${data.events}.`;
+
         try {
           const res = await fetch("https://openrouter.ai/api/v1/chat/completions", {
             method: "POST",
@@ -303,6 +283,46 @@
       typer();
     }
 
+    function liveUpdate() {
+      const data = getData();
+      const style = document.getElementById("style").value;
+      const preview = generateTemplate(data, style);
+      typeLivePreview(preview);
+    }
+
+    let typingTimeout;
+    function typeLivePreview(text) {
+      clearTimeout(typingTimeout);
+      const el = document.getElementById("livePreview");
+      el.textContent = "";
+      let i = 0;
+
+      function typer() {
+        if (i < text.length) {
+          el.textContent += text.charAt(i);
+          i++;
+          typingTimeout = setTimeout(typer, 20);
+        }
+      }
+      typer();
+    }
+
+    function generateTemplate(data, style) {
+      const warianty = [
+        `${data.teamA} vs ${data.teamB} - wynik: ${data.score}. MVP: ${data.mvp}. ${data.events}`,
+        `${data.teamA} i ${data.teamB} rozegrali mecz zakończony ${data.score}. Strzelcy: ${data.scorers}.`,
+        `Mecz ${data.teamA} - ${data.teamB}: ${data.score}. ${data.mvp} zagrał świetnie!`
+      ];
+
+      if (style === "luz") {
+        warianty[0] = `Ależ mecz! ${data.teamA} kontra ${data.teamB}, wynik ${data.score}, MVP: ${data.mvp}!`;
+        warianty[1] = `${data.teamA} i ${data.teamB} dali show! Strzelcy: ${data.scorers}. Wynik: ${data.score}`;
+        warianty[2] = `${data.mvp} pokazał klasę, a wynik meczu to ${data.score}`;
+      }
+
+      return warianty[Math.floor(Math.random() * warianty.length)];
+    }
+
     function toggleTheme() {
       document.body.classList.toggle("light");
       const isLight = document.body.classList.contains("light");
@@ -316,6 +336,5 @@
         document.getElementById("themeLabel").textContent = "Dzienny";
       }
     });
-  </script>
-</body>
+  </script></body>
 </html>
