--- a/index.html
+++ b/index.html
@@ -12,157 +12,163 @@
       --text-color: #fff;
       --highlight: #00ffae;
       --shadow: rgba(0, 255, 174, 0.2);
-    }body.light {
-  --bg-color: #f4f4f4;
-  --container-bg: #fff;
-  --input-bg: #eee;
-  --text-color: #111;
-  --highlight: #007f6e;
-  --shadow: rgba(0, 0, 0, 0.1);
-  animation: none;
-}
+    }
+    body.light {
+      --bg-color: #f4f4f4;
+      --container-bg: #fff;
+      --input-bg: #eee;
+      --text-color: #111;
+      --highlight: #007f6e;
+      --shadow: rgba(0, 0, 0, 0.1);
+      animation: none;
+    }
 
-body {
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
-  background: var(--bg-color);
-  color: var(--text-color);
-  padding: 2rem 1rem 5rem;
-  transition: background 0.3s, color 0.3s;
-  animation: bgPulse 10s ease-in-out infinite;
-  background: linear-gradient(135deg, #0a0f24, #101428, #0c122a);
-  background-size: 600% 600%;
-}
+    body {
+      margin: 0;
+      font-family: 'Roboto', sans-serif;
+      background: var(--bg-color);
+      color: var(--text-color);
+      padding: 2rem 1rem 5rem;
+      transition: background 0.3s, color 0.3s;
+      animation: bgPulse 10s ease-in-out infinite;
+      background: linear-gradient(135deg, #0a0f24, #101428, #0c122a);
+      background-size: 600% 600%;
+    }
 
-@keyframes bgPulse {
-  0%, 100% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-}
+    @keyframes bgPulse {
+      0%, 100% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+    }
 
-h1 {
-  font-family: 'Russo One', sans-serif;
-  font-size: 2.5rem;
-  text-align: center;
-  color: var(--highlight);
-  animation: fadeIn 1s ease-out;
-}
+    h1 {
+      font-family: 'Russo One', sans-serif;
+      font-size: 2.5rem;
+      text-align: center;
+      color: var(--highlight);
+      animation: fadeIn 1s ease-out;
+    }
 
-.container {
-  max-width: 600px;
-  margin: auto;
-  background-color: var(--container-bg);
-  padding: 2rem;
-  border-radius: 16px;
-  box-shadow: 0 0 20px var(--shadow);
-  animation: fadeInUp 0.7s ease-out;
-}
+    .container {
+      max-width: 600px;
+      margin: auto;
+      background-color: var(--container-bg);
+      padding: 2rem;
+      border-radius: 16px;
+      box-shadow: 0 0 20px var(--shadow);
+      animation: fadeInUp 0.7s ease-out;
+    }
 
-@keyframes fadeInUp {
-  from { opacity: 0; transform: translateY(20px); }
-  to { opacity: 1; transform: translateY(0); }
-}
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
 
-input, textarea, select {
-  width: 100%;
-  padding: 0.75rem;
-  margin-top: 0.3rem;
-  margin-bottom: 1rem;
-  border: none;
-  border-radius: 8px;
-  background: var(--input-bg);
-  color: var(--text-color);
-  font-size: 1rem;
-  transition: box-shadow 0.3s ease, background 0.3s ease;
-}
+    input, textarea, select {
+      width: 100%;
+      padding: 0.75rem;
+      margin-top: 0.3rem;
+      margin-bottom: 1rem;
+      border: none;
+      border-radius: 8px;
+      background: var(--input-bg);
+      color: var(--text-color);
+      font-size: 1rem;
+      transition: box-shadow 0.3s ease, background 0.3s ease;
+    }
 
-input:focus, textarea:focus, select:focus {
-  outline: none;
-  box-shadow: 0 0 10px var(--highlight);
-  background-color: #2a2f4d;
-}
+    input:focus, textarea:focus, select:focus {
+      outline: none;
+      box-shadow: 0 0 10px var(--highlight);
+      background-color: #2a2f4d;
+    }
 
-.theme-toggle {
-  position: fixed;
-  top: 1rem;
-  right: 1rem;
-  background: var(--highlight);
-  color: #000;
-  border: none;
-  padding: 0.5rem 1rem;
-  border-radius: 999px;
-  font-weight: bold;
-  cursor: pointer;
-  z-index: 999;
-  transition: transform 0.2s ease;
-}
+    .theme-toggle {
+      position: fixed;
+      top: 1rem;
+      right: 1rem;
+      background: var(--highlight);
+      color: #000;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 999px;
+      font-weight: bold;
+      cursor: pointer;
+      z-index: 999;
+      transition: transform 0.2s ease;
+    }
 
-.theme-toggle:hover {
-  transform: scale(1.05);
-}
+    .theme-toggle:hover {
+      transform: scale(1.05);
+    }
 
-.sticky-button {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding: 1rem;
-  background: var(--container-bg);
-  box-shadow: 0 -4px 10px var(--shadow);
-  z-index: 100;
-}
+    .sticky-button {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      padding: 1rem;
+      background: var(--container-bg);
+      box-shadow: 0 -4px 10px var(--shadow);
+      z-index: 100;
+    }
 
-button.generate {
-  background-color: var(--highlight);
-  color: #000;
-  padding: 0.8rem;
-  width: 100%;
-  font-size: 1.1rem;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  font-weight: bold;
-  transition: background-color 0.3s ease, transform 0.2s ease;
-}
+    button.generate {
+      background-color: var(--highlight);
+      color: #000;
+      padding: 0.8rem;
+      width: 100%;
+      font-size: 1.1rem;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background-color 0.3s ease, transform 0.2s ease;
+    }
 
-button.generate:hover {
-  background-color: #00c98e;
-  transform: scale(1.02);
-}
+    button.generate:hover {
+      background-color: #00c98e;
+      transform: scale(1.02);
+    }
 
-.output {
-  margin-top: 2rem;
-  background: #1e2640;
-  padding: 1.5rem;
-  border-radius: 12px;
-  white-space: pre-wrap;
-  box-shadow: inset 0 0 10px rgba(0, 255, 174, 0.1);
-  font-size: 1.1rem;
-  animation: fadeIn 0.5s ease-in;
-  min-height: 100px;
-}
+    button.generate:disabled {
+      background-color: #888;
+      cursor: not-allowed;
+      transform: none;
+    }
 
-.live-preview {
-  font-style: italic;
-  color: #aaa;
-  margin-top: 1rem;
-  font-size: 0.95rem;
-  min-height: 60px;
-}
+    .output {
+      margin-top: 2rem;
+      background: #1e2640;
+      padding: 1.5rem;
+      border-radius: 12px;
+      white-space: pre-wrap;
+      box-shadow: inset 0 0 10px rgba(0, 255, 174, 0.1);
+      font-size: 1.1rem;
+      animation: fadeIn 0.5s ease-in;
+      min-height: 100px;
+    }
 
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
+    .live-preview {
+      font-style: italic;
+      color: #aaa;
+      margin-top: 1rem;
+      font-size: 0.95rem;
+      min-height: 60px;
+    }
 
-@media (min-width: 601px) {
-  .sticky-button {
-    position: static;
-    background: none;
-    box-shadow: none;
-    padding: 0;
-  }
-}
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
 
+    @media (min-width: 601px) {
+      .sticky-button {
+        position: static;
+        background: none;
+        box-shadow: none;
+        padding: 0;
+      }
+    }
   </style>
 </head>
 <body>
@@ -200,9 +206,11 @@ button.generate:hover {
     <label>OpenRouter API Key:<input id="apikey" placeholder="Wymagany tylko dla AI" /></label>
     <div class="live-preview" id="livePreview">Podgląd na żywo...</div>
     <div class="output" id="summary"></div>
-  </div>  <div class="sticky-button">
-    <button class="generate" onclick="generateSummary()">Generuj podsumowanie</button>
-  </div>  <script>
+  </div>
+  <div class="sticky-button">
+    <button class="generate" id="generateBtn" onclick="generateSummary()">Generuj podsumowanie</button>
+  </div>
+  <script>
     function getData() {
       return {
         teamA: document.getElementById("teamA").value,
@@ -230,13 +238,19 @@ button.generate:hover {
       const style = document.getElementById("style").value;
       const apiKey = document.getElementById("apikey").value;
       const summaryDiv = document.getElementById("summary");
+      const generateBtn = document.getElementById("generateBtn");
+
+      generateBtn.disabled = true;
       summaryDiv.textContent = "";
 
+      const finish = () => generateBtn.disabled = false;
+
       if (mode === "template") {
-        typeText(summaryDiv, generateTemplate(data, style));
+        typeText(summaryDiv, generateTemplate(data, style), 0, finish);
       } else {
         if (!apiKey) {
           alert("Wprowadź klucz API");
+          finish();
           return;
         }
 
@@ -262,22 +276,26 @@ button.generate:hover {
           const json = await res.json();
           if (json.error) {
             summaryDiv.textContent = `Błąd API: ${json.error.message}`;
+            finish();
           } else {
-            typeText(summaryDiv, json.choices?.[0]?.message?.content || "Brak odpowiedzi");
+            typeText(summaryDiv, json.choices?.[0]?.message?.content || "Brak odpowiedzi", 0, finish);
           }
         } catch (e) {
           summaryDiv.textContent = `Błąd połączenia: ${e.message}`;
+          finish();
         }
       }
     }
 
-    function typeText(element, text, i = 0) {
+    function typeText(element, text, i = 0, onDone = () => {}) {
       element.textContent = "";
       function typer() {
         if (i < text.length) {
           element.textContent += text.charAt(i);
           i++;
           setTimeout(typer, 15);
+        } else {
+          onDone();
         }
       }
       typer();
@@ -336,5 +354,6 @@ button.generate:hover {
         document.getElementById("themeLabel").textContent = "Dzienny";
       }
     });
-  </script></body>
+  </script>
+</body>
 </html>
