--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="pl">
+<!DOCTYPE html>
+<html lang="pl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -173,6 +174,7 @@
   <div class="container">
     <h1>Generator Podsumowań</h1>
   
+    <!-- Główne pola formularza (wymagane pola oznaczone gwiazdką) -->
     <label for="teamA">Drużyna A: <span style="color: red;">⭐</span></label>
     <input id="teamA" oninput="liveUpdate()" placeholder="np. FC Łódź" autofocus />
   
@@ -182,17 +184,22 @@
     <label for="score">Wynik: <span style="color: red;">⭐</span></label>
     <input id="score" oninput="liveUpdate()" placeholder="np. 2:1" />
   
+    <label for="totalGoals">Liczba bramek (łącznie): <span style="color: red;">★</span></label>
+    <input id="totalGoals" oninput="liveUpdate()" placeholder="np. 3" />
+  
+    <label for="mvp">MVP meczu: <span style="color: red;">★</span></label>
+    <input id="mvp" oninput="liveUpdate()" placeholder="np. Kowalski" />
+  
+    <!-- Przycisk wyświetlający dodatkowe opcje -->
     <button type="button" onclick="toggleAdvanced()" id="toggleAdvancedBtn" style="margin: 1rem 0;">🔽 Pokaż więcej opcji</button>
   
+    <!-- Opcje dodatkowe -->
     <div id="advancedFields" style="display: none;">
       <label for="halftime">Wynik do przerwy:</label>
       <input id="halftime" oninput="liveUpdate()" placeholder="np. 1:0" />
   
       <label for="firstScorer">Pierwszy strzelec:</label>
       <input id="firstScorer" oninput="liveUpdate()" placeholder="np. Kowalski (FC Łódź)" />
-  
-      <label for="totalGoals">Liczba bramek (łącznie):</label>
-      <input id="totalGoals" oninput="liveUpdate()" placeholder="np. 3" />
   
       <label for="goalsHalftime">Bramki do przerwy:</label>
       <input id="goalsHalftime" oninput="liveUpdate()" placeholder="np. 1" />
@@ -202,9 +209,6 @@
   
       <label for="cards">Kartki:</label>
       <textarea id="cards" oninput="liveUpdate()" placeholder="np. Żółta: Malinowski 45'"></textarea>
-  
-      <label for="mvp">MVP meczu:</label>
-      <input id="mvp" oninput="liveUpdate()" placeholder="np. Kowalski" />
   
       <label for="starA">SuperStar - Drużyna A:</label>
       <input id="starA" oninput="liveUpdate()" placeholder="np. Kowalski" />
@@ -223,6 +227,9 @@
   
       <label for="events">Wydarzenia specjalne:</label>
       <textarea id="events" oninput="liveUpdate()" placeholder="np. rzut karny w 89'"></textarea>
+      
+      <label for="matchLevel">Poziom meczu:</label>
+      <input id="matchLevel" oninput="liveUpdate()" placeholder="np. niski, średni, wysoki lub opis" />
     </div>
   
     <label for="mode">Tryb generowania:</label>
@@ -235,6 +242,9 @@
     <select id="style">
       <option value="serio">Na serio</option>
       <option value="luz">Na luzie</option>
+      <option value="poziom">Poziom meczu</option>
+      <option value="dziennikarz">Profesjonalny dziennikarz sportowy</option>
+      <option value="emocjonujacy">Emocjonujący</option>
     </select>
   
     <label for="apikey">OpenRouter API Key:</label>
@@ -244,37 +254,41 @@
     <div class="output" id="summary"></div>
   
     <button class="generate" id="generateBtn" onclick="generateSummary()">Generuj podsumowanie</button>
-    <button class="generate" onclick="downloadSummary()">Zapisz jako TXT</button>
+    <button class="generate" id="copyBtn" onclick="copySummary()">Kopiuj</button>
   </div>
-
-  <audio id="clickSound" src="click.mp3" preload="auto"></audio>
-
+  
   <script>
     function getData() {
       return {
         teamA: document.getElementById("teamA").value,
         teamB: document.getElementById("teamB").value,
         score: document.getElementById("score").value,
+        totalGoals: document.getElementById("totalGoals").value,
+        mvp: document.getElementById("mvp").value,
         halftime: document.getElementById("halftime").value,
         firstScorer: document.getElementById("firstScorer").value,
-        totalGoals: document.getElementById("totalGoals").value,
         goalsHalftime: document.getElementById("goalsHalftime").value,
         scorers: document.getElementById("scorers").value,
         cards: document.getElementById("cards").value,
-        mvp: document.getElementById("mvp").value,
         starA: document.getElementById("starA").value,
         starB: document.getElementById("starB").value,
         referee: document.getElementById("referee").value,
         placeA: document.getElementById("placeA").value,
         placeB: document.getElementById("placeB").value,
-        events: document.getElementById("events").value
+        events: document.getElementById("events").value,
+        matchLevel: document.getElementById("matchLevel").value
       };
     }
-
+  
+    // Rozszerzona walidacja – wymagane pola: drużyny, wynik, liczba bramek i MVP meczu
     function validate(data) {
-      return data.teamA && data.teamB && data.score;
+      if (!data.teamA || !data.teamB || !data.score || !data.totalGoals || !data.mvp) {
+        alert("Wprowadź drużyny, wynik, liczbę bramek oraz MVP meczu!");
+        return false;
+      }
+      return true;
     }
-
+  
     async function generateSummary() {
       const data = getData();
       const mode = document.getElementById("mode").value;
@@ -282,25 +296,42 @@
       const apiKey = document.getElementById("apikey").value;
       const summaryDiv = document.getElementById("summary");
       const generateBtn = document.getElementById("generateBtn");
-      const clickSound = document.getElementById("clickSound");
-
-      clickSound.play();
-      generateBtn.disabled = true;
-      generateBtn.classList.add("loading");
-      summaryDiv.textContent = "";
-
+  
+      // Jeśli wybrano styl "Poziom meczu", pole matchLevel musi być wypełnione
+      if (style === "poziom" && data.matchLevel.trim() === "") {
+        alert("Aby użyć stylu 'Poziom meczu', wypełnij pole 'Poziom meczu'.");
+        return;
+      }
+  
       if (!validate(data)) {
-        alert("Wprowadź drużyny i wynik!");
         generateBtn.disabled = false;
         generateBtn.classList.remove("loading");
         return;
       }
-
+  
+      generateBtn.disabled = true;
+      generateBtn.classList.add("loading");
+      summaryDiv.textContent = "";
+  
       const finish = () => {
         generateBtn.disabled = false;
         generateBtn.classList.remove("loading");
       };
-
+  
+      // Ustalenie promptu w zależności od wybranego stylu
+      let styleInstructions = "";
+      if (style === "luz") {
+        styleInstructions = "Napisz w lekkim, zabawnym stylu, pełnym luzu i emocji.";
+      } else if (style === "poziom") {
+        styleInstructions = "Skoncentruj się na analizie poziomu meczu. Użyj podanej oceny lub opisu, by precyzyjnie przedstawić jakość gry, intensywność oraz zaangażowanie zawodników.";
+      } else if (style === "dziennikarz") {
+        styleInstructions = "Napisz w stylu profesjonalnego dziennikarza sportowego, precyzyjnie analizując przebieg i kontekst meczu.";
+      } else if (style === "emocjonujacy") {
+        styleInstructions = "Napisz emocjonujące podsumowanie pełne napięcia i dramatyzmu, oddające emocje towarzyszące meczowi.";
+      } else {
+        styleInstructions = "Napisz w poważnym, sportowo-analitycznym stylu.";
+      }
+  
       if (mode === "template") {
         typeText(summaryDiv, generateTemplate(data, style), 0, finish);
       } else {
@@ -309,19 +340,15 @@
           finish();
           return;
         }
-
-        const styleInstructions = style === "luz"
-          ? "Napisz w lekkim, zabawnym stylu, pełnym luzu i emocji."
-          : "Napisz w poważnym, sportowo-analitycznym stylu.";
-
+  
         let prompt = `${styleInstructions}\nStwórz podsumowanie meczu piłkarskiego pomiędzy ${data.teamA} i ${data.teamB}.\nWynik końcowy: ${data.score}.`;
-
+  
         if (data.halftime) prompt += ` (do przerwy: ${data.halftime}).`;
         if (data.firstScorer) prompt += `\nPierwszy strzelec: ${data.firstScorer}.`;
         if (data.totalGoals) prompt += `\nBramki: ${data.totalGoals}`;
         if (data.goalsHalftime) prompt += ` (do przerwy: ${data.goalsHalftime})`;
         if (data.totalGoals || data.goalsHalftime) prompt += `.`;
-
+  
         if (data.scorers) prompt += `\nStrzelcy: ${data.scorers}.`;
         if (data.cards) prompt += `\nKartki: ${data.cards}.`;
         if (data.mvp) prompt += `\nMVP: ${data.mvp}.`;
@@ -335,7 +362,11 @@
           prompt += `.`;
         }
         if (data.events) prompt += `\nDodatkowe wydarzenia: ${data.events}.`;
-
+        // Dla stylu "Poziom meczu" dodajemy ocenę, jeśli została podana
+        if (style === "poziom" && data.matchLevel) {
+          prompt += `\nPoziom meczu: ${data.matchLevel}.`;
+        }
+  
         try {
           const res = await fetch("https://openrouter.ai/api/v1/chat/completions", {
             method: "POST",
@@ -349,10 +380,10 @@
               temperature: 0.9
             })
           });
-
+  
           const json = await res.json();
           const aiText = json.choices?.[0]?.message?.content;
-
+  
           if (json.error || !aiText) {
             summaryDiv.textContent = `Błąd API: ${json.error?.message || "Brak odpowiedzi z AI"}`;
             finish();
@@ -365,7 +396,7 @@
         }
       }
     }
-
+  
     function typeText(element, text, i = 0, onDone = () => {}) {
       element.textContent = "";
       let index = i;
@@ -380,16 +411,14 @@
       }
       typer();
     }
-
-
-
+  
     function liveUpdate() {
       const data = getData();
       const style = document.getElementById("style").value;
       const preview = generateTemplate(data, style);
       typeLivePreview(preview);
     }
-
+  
     let typingTimeout;
     function typeLivePreview(text) {
       clearTimeout(typingTimeout);
@@ -405,7 +434,7 @@
       }
       typer();
     }
-
+  
     function generateTemplate(data, style) {
       const warianty = [
         `${data.teamA} vs ${data.teamB} - wynik: ${data.score}. MVP: ${data.mvp}. ${data.events}`,
@@ -419,53 +448,55 @@
       }
       return warianty[Math.floor(Math.random() * warianty.length)];
     }
-
+  
     function toggleTheme() {
       document.body.classList.toggle("light");
       const isLight = document.body.classList.contains("light");
       document.getElementById("themeLabel").textContent = isLight ? "Dzienny" : "Nocny";
       localStorage.setItem("theme", isLight ? "light" : "dark");
     }
-
+  
     window.addEventListener("DOMContentLoaded", () => {
       if (localStorage.getItem("theme") === "light") {
         document.body.classList.add("light");
         document.getElementById("themeLabel").textContent = "Dzienny";
       }
     });
-
+  
     document.addEventListener("keydown", function(e) {
       if (e.key === "Enter" && !e.shiftKey && document.activeElement.tagName !== "TEXTAREA") {
         e.preventDefault();
         document.getElementById("generateBtn").click();
       }
     });
-
-    function downloadSummary() {
+  
+    function copySummary() {
       const text = document.getElementById("summary").textContent;
       if (!text.trim()) {
         alert("Brak wygenerowanego podsumowania!");
         return;
       }
-      const blob = new Blob([text], { type: 'text/plain' });
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement("a");
-      a.href = url;
-      a.download = "podsumowanie.txt";
-      a.click();
-      URL.revokeObjectURL(url);
+      navigator.clipboard.writeText(text)
+        .then(() => {
+          alert("Podsumowanie skopiowane do schowka!");
+        })
+        .catch(err => {
+          console.error("Błąd kopiowania:", err);
+        });
     }
+  
+    // Zaktualizowana funkcja toggleAdvanced sprawdzająca także pusty string
     function toggleAdvanced() {
-  const advanced = document.getElementById("advancedFields");
-  const btn = document.getElementById("toggleAdvancedBtn");
-  const isVisible = advanced.style.display === "block";
-  advanced.style.display = isVisible ? "none" : "block";
-  btn.textContent = isVisible ? "🔽 Pokaż więcej opcji" : "🔼 Ukryj dodatkowe opcje";
-}
-
+      const advanced = document.getElementById("advancedFields");
+      const btn = document.getElementById("toggleAdvancedBtn");
+      if (advanced.style.display === "none" || advanced.style.display === "") {
+        advanced.style.display = "block";
+        btn.textContent = "🔼 Ukryj dodatkowe opcje";
+      } else {
+        advanced.style.display = "none";
+        btn.textContent = "🔽 Pokaż więcej opcji";
+      }
+    }
   </script>
 </body>
 </html>
-
-
-
