--- a/index.html
+++ b/index.html
@@ -214,12 +214,12 @@
     </div>    
     <h1>Generator Podsumowań</h1>
     <div class="leagues-buttons">
-      <button onclick="openLeague('https:lodz.ligafanow.pl/rozgrywki/tabela/33/222')">Liga 1</button>
-      <button onclick="openLeague('https:lodz.ligafanow.pl/rozgrywki/tabela/33/223')">Liga 2</button>
-      <button onclick="openLeague('https:lodz.ligafanow.pl/rozgrywki/tabela/33/224')">Liga 3</button>
-      <button onclick="openLeague('https:lodz.ligafanow.pl/rozgrywki/tabela/33/225')">Liga 4</button>
-      <button onclick="openLeague('https:lodz.ligafanow.pl/rozgrywki/tabela/33/231')">Liga 5</button>
-      <button onclick="openLeague('https:lodz.ligafanow.pl/rozgrywki/tabela/33/232')">Liga 6</button>
+      <button onclick="openLeague('https://lodz.ligafanow.pl/rozgrywki/tabela/33/222')">Liga 1</button>
+      <button onclick="openLeague('https://lodz.ligafanow.pl/rozgrywki/tabela/33/223')">Liga 2</button>
+      <button onclick="openLeague('https://lodz.ligafanow.pl/rozgrywki/tabela/33/224')">Liga 3</button>
+      <button onclick="openLeague('https://lodz.ligafanow.pl/rozgrywki/tabela/33/225')">Liga 4</button>
+      <button onclick="openLeague('https://lodz.ligafanow.pl/rozgrywki/tabela/33/231')">Liga 5</button>
+      <button onclick="openLeague('https://lodz.ligafanow.pl/rozgrywki/tabela/33/232')">Liga 6</button>
     </div>
   
     <!-- Główne pola formularza (wymagane pola oznaczone gwiazdką) -->
